--- a/CABG/MBFTools/RayBasedProfile.ipynb
+++ b/CABG/MBFTools/RayBasedProfile.ipynb
@@ -32,11 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "InputFolder = \"/Users/ana/Documents/AnahitaSeresti/05_PrePostCABG/RayCasting/SU04B\"\n",
+    "InputFolder = \"/Volumes/T7_Research/CABG_Backup/05_PrePostCABG/RayCasting/SU07A\"\n",
     "slice_apex = f\"{InputFolder}/Slice_Apex.vtp\"\n",
     "slice_base = f\"{InputFolder}/Slice_Base.vtp\"\n",
     "#InputMyocardium = f\"{InputFolder}/Myocardium.vtp\"\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
     "    L_Section_Ray = 10\n",
     "    L_Sphere_Ray = 5\n",
     "    Ray_Thickness = 0.02\n",
-    "    Base_Cover = 3.5\n",
+    "    Base_Cover = 4\n",
     "    Apex_Cover = 0\n",
     "\n",
     "elif scale == 'mm':\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,9 +264,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Extracting the Centerline of the Myocardium\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nMyocardium = ReadVTUFile(InputMyocardiumVTU)\\n\\nBoundary_Array = numpy_to_vtk(np.array([1 for _ in range(Myocardium.GetNumberOfPoints())]))\\nBoundary_Array.SetName(\"MyocardiumSilhouette\")\\nMyocardium.GetPointData().AddArray(Boundary_Array)\\n\\nInputMBFBase = f\"{OutputFolder}/UpperMyo.vtu\"\\nInputMBFApex = f\"{OutputFolder}/ApexMyo.vtu\"\\n\\n\"\"\"ConvertVTU = vtk.vtkAppendFilter()\\nConvertVTU.SetInputData(Myocardium)\\nConvertVTU.Update()\\nMyocardiumVTU = ConvertVTU.GetOutput()\"\"\"\\nUpperMyo = ClipVolumeWPlane(Myocardium, apex_centeroid, CL_axis, True)\\nApexMyo = ClipVolumeWPlane(Myocardium, apex_centeroid, CL_axis, False)\\nWriteVTUFile(InputMBFBase, UpperMyo)\\nWriteVTUFile(InputMBFApex, ApexMyo)\\n'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(\"--- Extracting the Centerline of the Myocardium\")\n",
     "cl_file = f\"{OutputFolder}/CenterLine.vtp\"\n",
@@ -307,9 +325,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ImageScalars'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "for i in range(MBF_.GetPointData().GetNumberOfArrays()):\n",
     "    arrayname_ = MBF_.GetPointData().GetArrayName(i)\n",
@@ -323,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,9 +642,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Visualizing Ray Casting\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"--- Visualizing Ray Casting\")\n",
     "CLPoints = CenterLine.GetPoints()\n",
@@ -638,9 +675,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Ray Casting Across the Myocardium\n",
+      "------ Ray Casting across Sections along Myocardium:\n",
+      "    Progress: 0%\n",
+      "    Progress: 10%\n",
+      "    Progress: 20%\n",
+      "    Progress: 30%\n",
+      "    Progress: 40%\n",
+      "    Progress: 50%\n",
+      "    Progress: 60%\n",
+      "    Progress: 70%\n",
+      "    Progress: 80%\n",
+      "    Progress: 90%\n",
+      "    Progress: 100%\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"--- Ray Casting Across the Myocardium\")\n",
     "Rays_Myocardium = RayCastingAlongMyocardium(CLPointsArray)"
@@ -648,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,16 +714,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------ Ray Casting across the Apex Hemisphere:\n",
+      "    Progress: 0%\n",
+      "    Progress: 10%\n",
+      "    Progress: 20%\n",
+      "    Progress: 30%\n",
+      "    Progress: 40%\n",
+      "    Progress: 50%\n",
+      "    Progress: 60%\n",
+      "    Progress: 70%\n",
+      "    Progress: 80%\n",
+      "    Progress: 90%\n",
+      "    Progress: 100%\n",
+      "    Progress: 100%\n"
+     ]
+    }
+   ],
    "source": [
     "Rays_Hemisphere = RayCastingAcrossSphere()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +841,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "vtkfenics",
+   "display_name": "Perfusion",
    "language": "python",
    "name": "python3"
   },
@@ -778,7 +855,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
