Modify mean MBF calculation to take nonzero values

--- a/CABG/MBFTools/RayBasedProfile.ipynb
+++ b/CABG/MBFTools/RayBasedProfile.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,9 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "mkdir: /Volumes/T7_Research/CABG_Backup/05_PrePostCABG/RayCasting/SU07A/RayCastingResults: File exists\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import vtk\n",
@@ -97,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +288,7 @@
        "'\\nMyocardium = ReadVTUFile(InputMyocardiumVTU)\\n\\nBoundary_Array = numpy_to_vtk(np.array([1 for _ in range(Myocardium.GetNumberOfPoints())]))\\nBoundary_Array.SetName(\"MyocardiumSilhouette\")\\nMyocardium.GetPointData().AddArray(Boundary_Array)\\n\\nInputMBFBase = f\"{OutputFolder}/UpperMyo.vtu\"\\nInputMBFApex = f\"{OutputFolder}/ApexMyo.vtu\"\\n\\n\"\"\"ConvertVTU = vtk.vtkAppendFilter()\\nConvertVTU.SetInputData(Myocardium)\\nConvertVTU.Update()\\nMyocardiumVTU = ConvertVTU.GetOutput()\"\"\"\\nUpperMyo = ClipVolumeWPlane(Myocardium, apex_centeroid, CL_axis, True)\\nApexMyo = ClipVolumeWPlane(Myocardium, apex_centeroid, CL_axis, False)\\nWriteVTUFile(InputMBFBase, UpperMyo)\\nWriteVTUFile(InputMBFApex, ApexMyo)\\n'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,16 +333,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'ImageScalars'"
+       "'MappedScalar'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +387,7 @@
     "            ray_projected = ProbeFilter(ray, MBF)\n",
     "            \n",
     "            mbf_profile = vtk_to_numpy(ray_projected.GetPointData().GetArray(ScalarArray))\n",
-    "            mbf_values = mbf_profile[mbf_profile > 0]\n",
+    "            mbf_values = mbf_profile[mbf_profile != 0]\n",
     "            average_mbf = np.mean(mbf_values)\n",
     "            mbf_profile = numpy_to_vtk(np.array([average_mbf for _ in range(ray_projected.GetNumberOfPoints())]))\n",
     "            \n",
@@ -434,7 +442,7 @@
     "        ray_projected = ProbeFilter(ray, Apex)\n",
     "            \n",
     "        mbf_profile = vtk_to_numpy(ray_projected.GetPointData().GetArray(ScalarArray))\n",
-    "        mbf_values = mbf_profile[mbf_profile > 0]\n",
+    "        mbf_values = mbf_profile[mbf_profile != 0]\n",
     "        average_mbf = np.mean(mbf_values)\n",
     "        mbf_profile = numpy_to_vtk(np.array([average_mbf for _ in range(ray_projected.GetNumberOfPoints())]))\n",
     "        \n",
@@ -490,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,8 +525,8 @@
     "            ray_projected = ProbeFilter(ray, MBF)\n",
     "            \n",
     "            mbf_profile = vtk_to_numpy(ray_projected.GetPointData().GetArray(ScalarArray))\n",
-    "            #mbf_values = mbf_profile[mbf_profile > 0]\n",
-    "            average_mbf = np.mean(mbf_profile)\n",
+    "            mbf_values = mbf_profile[mbf_profile != 0]\n",
+    "            average_mbf = np.mean(mbf_values)\n",
     "            mbf_profile = numpy_to_vtk(np.array([average_mbf for _ in range(ray_projected.GetNumberOfPoints())]))\n",
     "            \n",
     "            mbf_profile.SetName(\"MBFProfile\")\n",
@@ -566,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,8 +596,8 @@
     "        ray_projected = ProbeFilter(ray, Apex)\n",
     "            \n",
     "        mbf_profile = vtk_to_numpy(ray_projected.GetPointData().GetArray(ScalarArray))\n",
-    "        #mbf_values = mbf_profile[mbf_profile > 0]\n",
-    "        average_mbf = np.mean(mbf_profile)\n",
+    "        mbf_values = mbf_profile[mbf_profile != 0]\n",
+    "        average_mbf = np.mean(mbf_values)\n",
     "        mbf_profile = numpy_to_vtk(np.array([average_mbf for _ in range(ray_projected.GetNumberOfPoints())]))\n",
     "        \n",
     "        mbf_profile.SetName(\"MBFProfile\")\n",
@@ -642,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
